# tensorflow_cc

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build-all-dockerfiles.sh  install-requirements.sh  ubuntu-requirements.sh
Dockerfiles/: alpine  archlinux  archlinux-cuda  archlinux-shared  archlinux-shared-cuda  archlinux-static  install-archlinux.sh  install-common.sh  install-ubuntu.sh  ubuntu  ubuntu-cuda  ubuntu-shared-cuda  ubuntu-static
example/: CMakeLists.txt  example.cpp
tensorflow_cc/: CMakeLists.txt
tensorflow_cc/cmake/: ProtobufExternal.cmake  TensorflowBase.cmake  TensorflowCCConfig.cmake.in  TensorflowShared.cmake  TensorflowStatic.cmake  build_tensorflow.sh  build_tensorflow.sh.in  copy_links.sh
tensorflow_cc/patches/: Rename-gettid-functions.patch  rename-gettid-functions.patch  v1.15.0-Rename-gettid-functions.patch  v1.15.0-workspace.bzl.patch  v2.5.0-Fix-NCCL-build-failure-with-CUDA-11.3.patch  workspace.bzl.patch
